turtleart.circletwo.CircleTwo.scala.error
Compilation error:
CircleTwo:8: error: ')' expected but '}' found.
} 
^